@@ -109,7 +109,18 @@ public class ServiceManager
 		ServiceListHandler dh = new ServiceListHandler(plugin,uri);
 		try
 		{
-			if (!XMLUtilities.parseXML(uri.openStream(), dh)
+			InputStream in = uri.openStream();
+			if(in == null)
+			{
+				// this happened when calling generateCache() in the context of 'find orphan jars'
+				// in org.gjt.sp.jedit.pluginmgr.ManagePanel.FindOrphan.actionPerformed(ActionEvent)
+				// because for not loaded plugins, the plugin will not be added to the list of pluginJars
+				// so the org.gjt.sp.jedit.proto.jeditresource.PluginResURLConnection will not find the plugin
+				// to read the resource from.
+				// Better log a small error message than a big stack trace
+				Log.log(Log.WARNING, ServiceManager.class, "Unable to open: " + uri);
+			}
+			else  if (!XMLUtilities.parseXML(uri.openStream(), dh)
 				&& cache != null)
 			{
 				cache.cachedServices = dh.getCachedServices();
