@@ -25,6 +25,7 @@ package org.gjt.sp.jedit.gui;
 //{{{ Imports
 import java.awt.Color;
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Iterator;
@@ -90,13 +91,27 @@ public class DockableWindowFactory
 			Log.log(Log.DEBUG,DockableWindowManager.class,
 				"Loading dockables from " + uri);
 			DockableListHandler dh = new DockableListHandler(plugin,uri);
-			boolean failure = XMLUtilities.parseXML(uri.openStream(), dh);
-
-			if (!failure && cache != null)
+			InputStream in = uri.openStream();
+			if(in == null)
 			{
-				cache.cachedDockableNames = dh.getCachedDockableNames();
-				cache.cachedDockableActionFlags = dh.getCachedDockableActionFlags();
-				cache.cachedDockableMovableFlags = dh.getCachedDockableMovableFlags();
+				// this happened when calling generateCache() in the context of 'find orphan jars'
+				// in org.gjt.sp.jedit.pluginmgr.ManagePanel.FindOrphan.actionPerformed(ActionEvent)
+				// because for not loaded plugins, the plugin will not be added to the list of pluginJars
+				// so the org.gjt.sp.jedit.proto.jeditresource.PluginResURLConnection will not find the plugin
+				// to read the resource from.
+				// Better log a small error message than a big stack trace
+				Log.log(Log.WARNING, this, "Unable to open: " + uri);
+			}
+			else
+			{
+				boolean failure = XMLUtilities.parseXML(in, dh);
+	
+				if (!failure && cache != null)
+				{
+					cache.cachedDockableNames = dh.getCachedDockableNames();
+					cache.cachedDockableActionFlags = dh.getCachedDockableActionFlags();
+					cache.cachedDockableMovableFlags = dh.getCachedDockableMovableFlags();
+				}
 			}
 		}
 		catch(IOException e)
